--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "cmb2/cmb2": "^2.7"
+        "cmb2/cmb2": "^2.7",
+      "ext-json": "*"
     },
     "require-dev": {
         "giacocorsiglia/wordpress-stubs": "^5.1"
